5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4008/executions/1798_2565.log
== TEST (2019-06-05 15:35:01) 
-- CODE:
from numpy import* 
medias = array(eval(input("medias: ")))
presenca = array(eval(input("presenca: ")))
carga = int(input("carga horaria: "))
cont = zeros(3, dtype=int)
ap = 0
rep_p_n = 0
rep_p_f = 0
for i in range(size(medias)):
	if(medias[i] >=5 and presenca[i] >= (70/100)*carga):
	ap = ap + 1
	cont[0] = 1 + cont[0]
	elif(medias[i] <5 and presenca[i] >(70/100)*carga):
	rep_p_n = rep_p_n + 1
	cont[1] = 1 + cont[1]
	elif(medias[i] >= 5 and presenca[i] < (70/100)*carga):
	rep_p_f = rep_p_f + 1
	cont[2] = 1 + cont[2]
print(cont)
	
-- ERROR:
File "XXXX", line 11
    ap = ap + 1
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 15:35:04) 
-- CODE:
from numpy import* 
medias = array(eval(input("medias: ")))
presenca = array(eval(input("presenca: ")))
carga = int(input("carga horaria: "))
cont = zeros(3, dtype=int)
ap = 0
rep_p_n = 0
rep_p_f = 0
for i in range(size(medias)):
	if(medias[i] >=5 and presenca[i] >= (70/100)*carga):
	ap = ap + 1
	cont[0] = 1 + cont[0]
	elif(medias[i] <5 and presenca[i] >(70/100)*carga):
	rep_p_n = rep_p_n + 1
	cont[1] = 1 + cont[1]
	elif(medias[i] >= 5 and presenca[i] < (70/100)*carga):
	rep_p_f = rep_p_f + 1
	cont[2] = 1 + cont[2]
print(cont)
	
-- ERROR:
File "XXXX", line 11
    ap = ap + 1
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 15:35:25) 
-- CODE:
from numpy import* 
medias = array(eval(input("medias: ")))
presenca = array(eval(input("presenca: ")))
carga = int(input("carga horaria: "))
cont = zeros(3, dtype=int)
ap = 0
rep_p_n = 0
rep_p_f = 0
for i in range(size(medias)):
	if(medias[i] >=5 and presenca[i] >= (70/100)*carga):
		ap = ap + 1
		cont[0] = 1 + cont[0]
	elif(medias[i] <5 and presenca[i] >(70/100)*carga):
		rep_p_n = rep_p_n + 1
		cont[1] = 1 + cont[1]
	elif(medias[i] >= 5 and presenca[i] < (70/100)*carga):
		rep_p_f = rep_p_f + 1
		cont[2] = 1 + cont[2]
print(cont)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 15:35:54) 
-- CODE:
from numpy import* 
medias = array(eval(input("medias: ")))
presenca = array(eval(input("presenca: ")))
carga = int(input("carga horaria: "))
cont = zeros(3, dtype=int)
ap = 0
rep_p_n = 0
rep_p_f = 0
for i in range(size(medias)):
	if(medias[i] >=5 and presenca[i] >= (70/100)*carga):
		ap = ap + 1
		cont[0] = 1 + cont[0]
	elif(medias[i] <5 and presenca[i] >(70/100)*carga):
		rep_p_n = rep_p_n + 1
		cont[1] = 1 + cont[1]
	elif(medias[i] >= 5 and presenca[i] < (70/100)*carga):
		rep_p_f = rep_p_f + 1
		cont[2] = 1 + cont[2]
print(cont)
	
-- EXECUTION TIME:
1.06894
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[5 0 0]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[6 0 1]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[6 1 3]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 15:38:45) 
-- CODE:
from numpy import* 
medias = array(eval(input("medias: ")))
presenca = array(eval(input("presenca: ")))
carga = int(input("carga horaria: "))
cont = zeros(3, dtype=int)

for i in range(size(medias)):
	if(medias[i] >=5 and presenca[i] >= (75/100)*carga):
		cont[0] = 1 + cont[0]
	elif(medias[i] <5 and presenca[i] >(75/100)*carga):
		cont[1] = 1 + cont[1]
	elif(medias[i] >= 5 and presenca[i] < (75/100)*carga):
		cont[2] = 1 + cont[2]
print(cont)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 15:39:06) 
-- CODE:
from numpy import* 
medias = array(eval(input("medias: ")))
presenca = array(eval(input("presenca: ")))
carga = int(input("carga horaria: "))
cont = zeros(3, dtype=int)

for i in range(size(medias)):
	if(medias[i] >=5 and presenca[i] >= (75/100)*carga):
		cont[0] = 1 + cont[0]
	elif(medias[i] <5 and presenca[i] >(75/100)*carga):
		cont[1] = 1 + cont[1]
	elif(medias[i] >= 5 and presenca[i] < (75/100)*carga):
		cont[2] = 1 + cont[2]
print(cont)
	
-- EXECUTION TIME:
0.930126
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
